2007-10-01  Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin
	.glade:
	* plugins/build-basic-autotools/build-basic-autotools.c:
	(basic_autotools_plugin_instance_init):
	* plugins/build-basic-autotools/build-basic-autotools.h:
	* plugins/build-basic-autotools/executer.c:
	(get_program_parameters):

	Fixed #477976 – Keybinding in run dialog

2007-09-24  Johannes Schmid <jhs@gnome.org>

	* plugins/search/search-replace.c: (on_message_clicked):

	Fixed #427104 – No "highlight" of lines matching find-result
	(from trunk)

2007-09-24  Johannes Schmid <jhs@gnome.org>

	* src/anjuta.glade:

	Fixed #479020 – Use of old open file dialog instead of GtkFileChooser

2007-09-24  Yang Hong  <hongyang@redflag-linux.com>

	reviewed by: Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/executer.c: (execute_program):
	Fix #478238 – set env for execute programe in the terminal

2007-09-10  Johannes Schmid <jhs@gnome.org>

	* configure.in:
	* libegg/egg-recent-model.c: (egg_recent_model_write_raw),
	(parse_info_init), (parse_info_free), (valid_element),
	(start_element_handler), (end_element_handler), (text_handler),
	(egg_recent_model_filter), (egg_recent_model_changed_timeout),
	(egg_recent_model_monitor_cb), (egg_recent_model_poll_timeout),
	(egg_recent_model_monitor), (egg_recent_model_read),
	(egg_recent_model_open_file), (egg_recent_model_lock_file),
	(egg_recent_model_unlock_file), (egg_recent_model_finalize),
	(egg_recent_model_set_property), (egg_recent_model_class_init),
	(egg_recent_model_init), (egg_recent_model_add_full),
	(egg_recent_model_delete), (egg_recent_model_get_list),
	(egg_recent_model_clear), (egg_recent_model_clear_mime_filter),
	(egg_recent_model_set_filter_mime_types),
	(egg_recent_model_clear_group_filter),
	(egg_recent_model_set_filter_groups),
	(egg_recent_model_clear_scheme_filter),
	(egg_recent_model_set_filter_uri_schemes),
	(egg_recent_model_remove_expired):
	